Finished formatting rand-inf + squashed a bug
The bug was simply that the quote author of the quote would not stick
'relatively' close to the quote it was attached to on a large screen
and would simply move the the rightmost edge of the page (respecting
page padding). This was not expected behaviour, some reorganising
of the html and css fixed this issue however.
- also the year for the 'copyright' was 2021, this has been fixed.

I've also assigned a maximum width to the quote and popup/sign up
so both stick closer to the middle of the page.

At this point this project is more or less finished (according to TOP
specs anyway (linked in README.md)). Any further changes will likely
be irrespective of TOP specifications and of my own free will...
unless we revisit the landing page later in TOP.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 body>* {
-    padding: 0 250px 0 250px;
+    padding: 0 200px 0 200px;
 }
 
 ul {
@@ -76,7 +76,6 @@ ul {
 .hero-content .support {
     font-size: 12px;
     color: #E5E7EB;
-
 }
 
 .hero-container img {
@@ -93,21 +92,63 @@ ul {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+.rand-inf h2 {
+    font-size: 32px;
+}
+
+.rand-inf .items {
+    display: flex;
+    text-align: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.items >* {
+    flex: 1;
+}
+
+.items img {
+    border-color: #3882F6;
+    border-style: solid;
+    border-radius: 10px;
+}
+
+/* ensuring subtext is centered with its img at all time. */
+.item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.subtext {
+    font-size: 12px;
+    color: #2F4F4F;
+    max-width: 200px;
 }
 
 .awe-inspiring-quote {
     background-color: #E5E7EB;
+}
+
+.quote-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    max-width: 900px;
+    margin: 0 auto;
 }
 
-.awe-inspiring-quote .quote {
+.quote-container .quote {
     font-size: 36px;
 }
 
-.awe-inspiring-quote .quote-auth {
+.quote-container .quote-auth {
     margin-left: auto;
 }
 
@@ -131,6 +172,7 @@ ul {
     align-items: center;
     width: 100%;
     height: auto;
+    max-width: 800px
 }
 
 .popup button {
